--- a/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.css
+++ b/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.css
@@ -72,7 +72,7 @@ a.explainable:hover span.explain {
   background-color: #656565;
   border-color: #000000;
 }
-/*# sourceMappingURL=_vonMorgen.css.map */
+/*#region map*/
 #map {
   position: absolute;
   top: 85px;
@@ -109,5 +109,4 @@ path.oyw-map-pointer {
   border-radius: 5px;
   border-width: 2px !important;
 }
-/*# sourceMappingURL=_vonMorgen.css.map */
-/*# sourceMappingURL=_vonMorgen.css.map */
+/*#endregion map*/
