--- a/onYOURway/App/_styles/themes/_shared.less
+++ b/onYOURway/App/_styles/themes/_shared.less
@@ -59,3 +59,41 @@
     right: 75%;
 }
 /**#endregion map */
+
+/*#region bootstrap form tweaks*/
+
+/*.input-group-btn {
+    position: relative;
+    font-size: 0px;
+    white-space: nowrap;
+}
+.input-group-addon, .input-group-btn {
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+}*/
+
+.input-group-c2 {
+	width: 16.6% !important;
+}
+.input-group-c3 {
+	width: 33% !important;
+}
+.input-group-c4 {
+	width: 50% !important;
+}
+.input-group-c6 {
+	width: 50% !important;
+}
+.input-group-c9 {
+	width: 67% !important;
+}
+.input-group-c10 {
+	width: 83.3% !important;
+}
+.input-group-c12 {
+	width: 100% !important;
+}
+
+
+/*#endregion bootstrap form tweaks*/
