--- a/onYOURway/App/views/my/siteCollector.html
+++ b/onYOURway/App/views/my/siteCollector.html
@@ -23,7 +23,7 @@
 
 	<form class="form">
 
-		<div class="row">
+		<div class="row panel-body">
 			<h1><span class="translate">Add a new site</span></h1>
 		</div>
 
@@ -41,7 +41,7 @@
 
 				<div class="form-group">
 					<label for="addSiteName" class="translate">Name:</label>
-					<input id="addSiteName" type="text" class="form-control siteName translatePlaceholder" placeholder="What is the name of the site?" />
+					<input id="addSiteName" type="text" data-bind="" class="form-control siteName translatePlaceholder" placeholder="What is the name of the site?" />
 				</div>
 
 				<div class="form-group">
@@ -54,36 +54,41 @@
 					Position
 				</header>-->
 
-				<label for="addSiteLocationStreet">Adresse</label>
 
-				<div class="control-group">
+				<div class="form-group">
+					<div class="btn btn-sm btn-warning pull-right selectPosition"><i class="fa fa-location-arrow"></i> <span class="translate">use current location</span></div>
+					<label for="addSiteLocationStreet">Adresse:</label>
 					<input data-bind="value: street" id="addSiteLocationStreet" type="text" class="form-control locationLat" placeholder="Straße + Nr." />
-					<input data-bind="value: city" id="addSiteLocationCity" type="text" class="form-control locationLng" placeholder="Stadt" />
 				</div>
-
-				<div class="btn btn-large btn-default selectPosition"><i class="fa fa-map-marker"></i> <span class="translate" data-bind="click: setMarker">Confirm on map</span></div>
-				<div class="btn btn-large btn-default updatePosition"><i class="fa fa-location-arrow"></i> <span class="translate">Refresh GPS</span></div>
-
-				<div class="line accuracy">
-					<div class="error hilight hidden"><span class="translate">Position accuracy</span>: &plusmn;<span class="value"></span>m</div>
+				<div class="form-group">
+					<div class="input-group input-group-c12" style="width: 100%;">
+						<input data-bind="" id="addSiteLocationPostalCode" type="text" class="form-control input-group-c3 locationLng" placeholder="PLZ" />
+						<input data-bind="value: city" id="addSiteLocationCity" type="text" class="form-control input-group-c9 locationLng" placeholder="Stadt" />
+					</div>
 				</div>
-				<!--</section>-->
-
+				<div class="form-group">
+					<input class="form-control translate" placeholder="Country" />
+				</div>
+				<div class="form-group">
+					<div class="btn btn-large btn-warning updatePosition"><i class="fa fa-map-marker" /> <span class="translate" data-bind="click: setMarker">set position</span> <i class="fa fa-arrow-down" /></div>
+					<div class="btn btn-large btn-warning pull-right updateAddress"><i class="fa fa-arrow-up" /> <span class="translate">set address</span> <i class="fa fa-envelope" /></div>
+				</div>
+				<div class="form-group">
+					<div class="input-group input-group-c12">
+						<input data-bind="" id="addSiteLocationLat" type="text" class="form-control locationLat input-group-c6" placeholder="Breitengrad" />
+						<input data-bind="" id="addSiteLocationLng" type="text" class="form-control locationLng input-group-c6" placeholder="Längengrad" />
+					</div>
+					<div class="line accuracy">
+						<div class="error hilight hidden"><span class="translate">Position accuracy</span>: &plusmn;<span class="value"></span>m</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="col-sm-6">
-				<div class="form-group country">
-					<label for="addCountryName" class="translate">Country:</label>
-
-					<div class="form-control btn btn-select">
-						<i class="icon-angle-right"></i> <span id="addCountryName" class="countryName"></span>
-					</div>
-				</div>
-
 				<!--tags/icons-->
 				<div class="form-group">
 
-					<label class="translate">Icons:</label>
+					<label class="translate">Tags:</label>
 
 					<div class="form-control">
 
@@ -107,6 +112,30 @@
 						</div>
 					</div>
 				</div>
+				<div class="form-group">
+					<label for="addSitePhotoCaption" class="translate">Photo caption:</label>
+					<input id="addSitePhotoCaption" type="text" class="form-control photoCaption translatePlaceholder" placeholder="What is in the photo?" />
+				</div>
+				<!--opening_hours-->
+				<div class="form-group">
+					<label>
+						<span class="translate">Öffnungszeiten:</span>
+					</label>
+					<input data-bind="" id="openingHours" type="text" class="form-control" placeholder="Opening Hours (editor comming soon)" />
+				</div>
+
+				<!--picture-->
+				<div class="form-group">
+					<label>
+						<span class="translate">Accessibility:</span>
+					</label>
+					<select data-bind="" id="accessibility" class="form-control">
+						<option value="">unbekannt</option>
+						<option value="yes">voll rollstuhlgerecht</option>
+						<option value="limited">teilweise rollstuhlgerecht</option>
+						<option value="no">nicht rollstuhlgerecht</option>
+					</select>
+				</div>
 
 				<!--<div class="line photo">
 					<label for="addSitePhoto">
@@ -121,15 +150,13 @@
 					<input type="file" id="addSitePhoto" accept="image/*;capture=camera">
 				</div>-->
 
-				<label for="addSitePhotoCaption" class="translate">Photo caption:</label>
-				<input id="addSitePhotoCaption" type="text" class="form-control photoCaption translatePlaceholder" placeholder="What is in the photo?" />
 			</div>
 		</div>
 
-
 		<div class="row panel-body">
 			<button class="ok btn btn-success btn-large pull-right"><i class="fa fa-check"></i> <span class="translate">submit</span> </button>
-		</div class="row">
+			<button class="ok btn btn-default btn-large pull-right"><i class="fa fa-remove"></i> <span class="translate">abbrechen</span> </button>
+		</div>
 	</form>
 
 </div>
